learing vh and flexbox

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     
     <div class="banner">
-      <div class="banner-content">
+      <div class="banner-text">
         <h1>Stripe</h1>
         <p>A cool payment API</p>
         <a href="#" class="btn-treehouse">Start now</a>
